<resources>
    <string name="app_name">App Chat</string>
    <string name="main_title">This is main page</string>
    <string name="chat">Chat</string>
    <string name="with">with</string>
    <string name="your_friends">your friends</string>
    <string name="log_in">Log in</string>
    <string name="without_account">You don\'t have account?</string>
    <string name="sign_up">Sign up here</string>
    <string name="username">Username</string>
    <string name="question">What should everyone can call you?</string>
    <string name="register">Register</string>
    <string name="agree">By registering, you agree to our Term of service and Privacy Policy</string>
    <string name="create_an_account">Create an account</string>
    <string name="account_information">Account information</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_out">Log out</string>
    <string name="account_setting">Account Setting</string>
    <string name="all_users">All Users</string>
    <string name="log_in_information">Log in information</string>
    <string name="forget_password">Forget Password</string>
    <string name="requests">Requests</string>
    <string name="messenger">Messenger</string>
    <string name="friends">Friends</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Hi there, I\'m using App Chat</string>
    <string name="btn_change_avatar_text">Change avatar</string>
    <string name="btn_change_status_text">Change status</string>
    <string name="dialog_header">Change Status</string>
    <string name="dialog_title">Type status that you want to change</string>
    <string name="status">Status</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
</resources>