<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <include
        layout="@layout/app_bar_layout"
        android:id="@+id/log_in_toolbar"/>

    <TextView
        android:textAllCaps="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/log_in_information"
        android:textAllCaps="true"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edt_emailAddress"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@string/username"
        android:background="@drawable/edit_text_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@string/username"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />

    <TextView
        android:textStyle="bold"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/open_sans_italic"
        android:text="@string/forget_password"
        android:textColor="#7289DA" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="3dp"
            android:shadowColor="@color/text_shadow_white"

            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="1"
            android:text="@string/without_account" />

        <TextView
            android:id="@+id/txv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:clickable="true"
            android:elevation="3dp"
            android:focusable="true"
            android:text="@string/sign_up"
            android:textColor="#7289DA"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_log_in"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#7289DA"
        android:elevation="3dp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>