<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7289DA"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <include
        android:id="@+id/setting_toolbar"
        layout="@layout/app_bar_layout" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:translationZ="90dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:cardCornerRadius="250dp">

            <ImageView
                android:id="@+id/img_avatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/profile" />

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:letterSpacing="0.3"
        android:text="@string/username"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_change_avatar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_start_background"
        android:text="@string/btn_change_avatar_text" />

    <Button
        android:id="@+id/btn_change_status"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_start_background"
        android:text="@string/btn_change_status_text" />


</LinearLayout>